# server/src/main/java/hu/personal/caradvertiser/exception/GlobalExceptionHandler.java
@@ -1,25 +1,29 @@
 package hu.personal.caradvertiser.exception;
 
+import hu.personal.caradvertiser.model.ErrorDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import javax.persistence.EntityExistsException;
-import javax.persistence.EntityNotFoundException;
-
 @RestControllerAdvice
 public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.NOT_FOUND)
     @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity<Object> handleEntityNotFound(EntityNotFoundException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
+    public ResponseEntity<ErrorDto> handleEntityNotFoundException(EntityNotFoundException ex) {
+        ErrorDto errorDto = new ErrorDto()
+                .wrongField(ex.getField())
+                .message(ex.getMessage());
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorDto);
     }
 
     @ResponseStatus(HttpStatus.FORBIDDEN)
-    @ExceptionHandler({IllegalArgumentException.class, EntityExistsException.class})
-    public ResponseEntity<Object> handleIllegalArgumentAndEntityExists(Exception ex) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ex.getMessage());
+    @ExceptionHandler({NotValidException.class, OtherUserEntityException.class})
+    public ResponseEntity<ErrorDto> handleNotValidAndOtherUserEntityException(NotValidException ex) {
+        ErrorDto errorDto = new ErrorDto()
+                .wrongField(ex.getField())
+                .message(ex.getMessage());
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(errorDto);
     }
 }
